# poc-workqueue-ray

./: .gitignore
poc_workqueue_ray/: .gitignore  CMakeLists.txt  Makefile  README.md  RFC-workqueue-vs-ray.md  compress_task  compress_task.cpp  ray_benchmark.py  run_ray.sh  run_work_queue.sh  wq_manager  wq_manager.cpp
poc_workqueue_ray/docs/: RFC-workqueue-vs-ray.md  SCENARIOS.md
poc_workqueue_ray/results/: benchmark_summary.txt  slurm_sim_summary.txt  spot_sim_summary.txt
poc_workqueue_ray/runs/test1/ray/: ray_results.json
poc_workqueue_ray/runs/test1/work_queue/: summary.txt
poc_workqueue_ray/runs/test1/work_queue/results/: stats_0.json  stats_1.json  stats_10.json  stats_11.json  stats_12.json  stats_13.json  stats_14.json  stats_15.json  stats_16.json  stats_17.json  stats_18.json  stats_19.json  stats_2.json  stats_20.json  stats_21.json  stats_22.json  stats_23.json  stats_3.json  stats_4.json  stats_5.json  stats_6.json  stats_7.json  stats_8.json  stats_9.json
poc_workqueue_ray/scripts/: build.sh  install_zfp.sh  run_ray.sh  run_slurm_sim.sh  run_spot_sim.sh  run_workqueue.sh  summarize_results.py
poc_workqueue_ray/src/: compress_task.cpp  ray_bag.py  workqueue_manager.cpp
rtm3d_marmousi/: CMakeLists.txt  README.md
